@@ -1,10 +1,21 @@
 plugins {
     id "net.ltgt.errorprone" version "3.0.1"
+    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 
 apply plugin: "com.google.osdetector"
 apply plugin: "java-library"
+
+spotless {
+    java {
+        googleJavaFormat('1.17.0') // or latest compatible with Java 17
+        target 'src/**/*.java'
+    }
+}
+
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 dependencies {
 
@@ -67,12 +78,13 @@ dependencies {
     jmh 'org.openjdk.jmh:jmh-core:1.+'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.+'
 
+    annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
+    implementation "edu.ucr.cs.riple.annotator:annotation-util:1.3.16-SNAPSHOT"
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-    errorprone "com.google.errorprone:error_prone_core:2.3.2"
+    errorprone "com.google.errorprone:error_prone_core:2.35.1"
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
-
-    annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
-    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-4-SNAPSHOT"
+    compileOnly "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
 }
 
 // Silences log statements during tests.   This still allows normal failures to be printed.
@@ -94,7 +106,18 @@ jmh {
     duplicateClassesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
-
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    ]
+}
+def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
+def nullaway_path = project.rootProject.projectDir.toString() + "/annotator-out/nullaway.xml"
 import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
     // remove the if condition if you want to run NullAway on test code
@@ -110,9 +133,10 @@ tasks.withType(JavaCompile) {
             option("NullAway:UnannotatedSubPackages", "com.netflix.zuul.init")
             option("NullAway:UnannotatedSubPackages", "com.netflix.zuul.filters")
             option("NullAway:SerializeFixMetadata", "true")
-            option("NullAway:FixSerializationConfigPath", "/tmp/NullAwayFix/nullaway.xml")
-            option("AnnotatorScanner:ConfigPath", "/tmp/NullAwayFix/scanner.xml")
+            option("NullAway:FixSerializationConfigPath", nullaway_path)
+            option("AnnotatorScanner:ConfigPath", scanner_path)
         }
         options.compilerArgs << "-Xmaxerrs" << "100000"
+        options.compilerArgs << "-Xmaxwarns" << "100000"
     }
 }
